--- a/belgeler/terimler.html
+++ b/belgeler/terimler.html
@@ -18,10 +18,10 @@ title: Terimler
     <th class="tg-baqh" colspan="6">Ekran Ölçekleri Tablosu | Screen Sizes Table<br></th>
   </tr>
   <tr>
-    <td class="tg-7uzy">Türkçe<br>Terimler<br></td>
-    <td class="tg-7uzy">English<br>Terms<br></td>
-    <td class="tg-7uzy">Türkçe<br>Terimler</td>
-    <td class="tg-7uzy">English<br>Terms<br></td>
+    <td class="tg-7uzy">Türkçe<br>terimler<br></td>
+    <td class="tg-7uzy">English<br>terms<br></td>
+    <td class="tg-7uzy">Türkçe<br>veri-niteliği<br>terimler<br></td>
+    <td class="tg-7uzy">English<br>data-attribute<br>terms<br></td>
     <td class="tg-7uzy">Açıklamalar</td>
     <td class="tg-7uzy">Descriptions</td>
   </tr>
