--- a/belgeler/terimler.html
+++ b/belgeler/terimler.html
@@ -28,64 +28,64 @@ title: Terimler
   <tr>
     <td class="tg-yw4l">Tüm ekranlar<br></td>
     <td class="tg-yw4l">All screens<br></td>
-    <td class="tg-baqh">gnl</td>
-    <td class="tg-baqh">gnl</td>
+    <td class="tg-baqh">data-gnl</td>
+    <td class="tg-baqh">data-gnl</td>
     <td class="tg-yw4l">Minik ekranlardan devasa ekranlara doğru ekranların hepsini seçer<br></td>
     <td class="tg-yw4l">Selects all screens from mini screens to huge screens</td>
   </tr>
   <tr>
     <td class="tg-7uzy">Minik ekran<br></td>
     <td class="tg-7uzy">Mini screen<br></td>
-    <td class="tg-sh4c">mnk<br></td>
-    <td class="tg-sh4c">mn</td>
+    <td class="tg-sh4c">data-mnk<br></td>
+    <td class="tg-sh4c">data-mn</td>
     <td class="tg-7uzy">Minik ekranlardan devasa ekranlara doğru ekranların hepsini seçer. "gnl" terimi ile aynıdır.<br></td>
     <td class="tg-7uzy">Selects all screens from mini screens to huge screens. It is the same as the "gnl" term.</td>
   </tr>
   <tr>
     <td class="tg-yw4l">Telefon ekranı<br></td>
     <td class="tg-yw4l">Mobile screen<br></td>
-    <td class="tg-baqh">ufk<br></td>
-    <td class="tg-baqh">xs<br></td>
+    <td class="tg-baqh">data-ufk<br></td>
+    <td class="tg-baqh">data-xs<br></td>
     <td class="tg-yw4l">Telefon ekranlarından devasa ekranlara doğru ekranların hepsini seçer</td>
     <td class="tg-yw4l">Selects all screens from mobile screens to huge screens</td>
   </tr>
   <tr>
     <td class="tg-7uzy">Tablet ekranı<br></td>
     <td class="tg-7uzy">Tablet screen<br></td>
-    <td class="tg-sh4c">kçk</td>
-    <td class="tg-sh4c">sm<br></td>
+    <td class="tg-sh4c">data-kçk</td>
+    <td class="tg-sh4c">data-sm<br></td>
     <td class="tg-7uzy">Tablet ekranlarından devasa ekranlara doğru ekranların hepsini seçer</td>
     <td class="tg-7uzy">Selects all screens from tablet screens to huge screens</td>
   </tr>
   <tr>
     <td class="tg-yw4l">Dizüstü ekranı<br></td>
     <td class="tg-yw4l">Laptop<br>screen<br></td>
-    <td class="tg-baqh">ort</td>
-    <td class="tg-baqh">md<br></td>
+    <td class="tg-baqh">data-ort</td>
+    <td class="tg-baqh">data-md<br></td>
     <td class="tg-yw4l">Dizüstü ekranlarından devasa ekranlara doğru ekranların hepsini seçer</td>
     <td class="tg-yw4l">Selects all screens from laptop screens to huge screens</td>
   </tr>
   <tr>
     <td class="tg-7uzy">Masaüstü ekranı<br></td>
     <td class="tg-7uzy">Desktop screen<br></td>
-    <td class="tg-sh4c">byk<br></td>
-    <td class="tg-sh4c">lg<br></td>
+    <td class="tg-sh4c">data-byk<br></td>
+    <td class="tg-sh4c">data-lg<br></td>
     <td class="tg-7uzy">Masaüstü ekranlarından devasa ekranlara doğru ekranların hepsini seçer</td>
     <td class="tg-7uzy">Selects all screens from desktop screens to huge screens</td>
   </tr>
   <tr>
     <td class="tg-yw4l">Televizyon ekranı<br></td>
     <td class="tg-yw4l">TV screen<br></td>
-    <td class="tg-baqh">kcm</td>
-    <td class="tg-baqh">xl</td>
+    <td class="tg-baqh">data-kcm</td>
+    <td class="tg-baqh">data-xl</td>
     <td class="tg-yw4l">Televizyon ekranlarından devasa ekranlara doğru ekranların hepsini seçer</td>
     <td class="tg-yw4l">Selects all screens from TV screens to huge screens</td>
   </tr>
   <tr>
     <td class="tg-7uzy">Dev ekranlar<br></td>
     <td class="tg-7uzy">Huge screen<br></td>
-    <td class="tg-sh4c">dev</td>
-    <td class="tg-sh4c">hg<br></td>
+    <td class="tg-sh4c">data-dev</td>
+    <td class="tg-sh4c">data-hg<br></td>
     <td class="tg-7uzy">Devasa ekranları seçer<br></td>
     <td class="tg-7uzy">Selects huge screens<br></td>
   </tr>
