--- a/belgeler/terimler.html
+++ b/belgeler/terimler.html
@@ -20,8 +20,8 @@ title: Terimler
   <tr>
     <td class="tg-7uzy">Türkçe<br>terimler<br></td>
     <td class="tg-7uzy">English<br>terms<br></td>
-    <td class="tg-7uzy">Türkçe<br>veri-niteliği<br>terimler<br></td>
-    <td class="tg-7uzy">English<br>data-attribute<br>terms<br></td>
+    <td class="tg-7uzy" width="15%">Türkçe<br>veri-niteliği<br>terimler<br></td>
+    <td class="tg-7uzy" width="15%">English<br>data-attribute<br>terms<br></td>
     <td class="tg-7uzy">Açıklamalar</td>
     <td class="tg-7uzy">Descriptions</td>
   </tr>
