--- a/belgeler/terimler.html
+++ b/belgeler/terimler.html
@@ -91,6 +91,69 @@ title: Terimler
   </tr>
 </table>
 
+<table class="tg">
+  <tr>
+    <th class="tg-baqh" colspan="6">Ekran Seçiciler Tablosu | Screen Selectors Table<br></th>
+  </tr>
+  <tr>
+    <td class="tg-7uzy">Türkçe<br>terimler<br></td>
+    <td class="tg-7uzy">English<br>terms<br></td>
+    <td class="tg-7uzy" width="15%">Türkçe<br>veri-niteliği<br>etiket terimleri<br></td>
+    <td class="tg-7uzy" width="15%">English<br>data-attribute<br>tag terms<br></td>
+    <td class="tg-7uzy">Açıklamalar</td>
+    <td class="tg-7uzy">Descriptions</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">Yalnız Ekran</td>
+    <td class="tg-yw4l">Alone Screen</td>
+    <td class="tg-baqh">bunu-<span data-metin="ana gri">sınıf</span></td>
+    <td class="tg-baqh"><span data-metin="ana gri">class</span>-it</td>
+    <td class="tg-yw4l">Sadece tanımlandığı ekran grubuna özellik atar</td>
+    <td class="tg-yw4l">Only assigns a property to the screen group that you define</td>
+  </tr>
+  <tr>
+    <td class="tg-7uzy">Diğer Ekranlar</td>
+    <td class="tg-7uzy">Other Screens</td>
+    <td class="tg-sh4c">diğerlerini-<span data-metin="ana gri">sınıf</span></td>
+    <td class="tg-sh4c"><span data-metin="ana gri">class</span>-others</td>
+    <td class="tg-7uzy">Tanımlandığı ekran grubundakiler dışında kalanlara özellik atar</td>
+    <td class="tg-7uzy">Assigns properties to those outside the defined screen group</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">Büyük Ekranlar</td>
+    <td class="tg-yw4l">Bigger Screens</td>
+    <td class="tg-baqh">büyüklerini-<span data-metin="ana gri">sınıf</span></td>
+    <td class="tg-baqh"><span data-metin="ana gri">class</span>-bigger</td>
+    <td class="tg-yw4l">Tanımlandığı ekrandan daha büyük ekranlara özellik atar</td>
+    <td class="tg-yw4l">Assigns features to screens bigger than the defined screen</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">Küçük Ekranlar</td>
+    <td class="tg-yw4l">Smaller Screens</td>
+    <td class="tg-baqh">küçüklerini-<span data-metin="ana gri">sınıf</span></td>
+    <td class="tg-baqh"><span data-metin="ana gri">class</span>-smaller</td>
+    <td class="tg-yw4l">Tanımlandığı ekrandan daha küçük ekranlara özellik atar</td>
+    <td class="tg-yw4l">Assigns features to screens smaller than the defined screen</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">Büyük Ekranlar İle</td>
+    <td class="tg-yw4l">With Bigger Screens</td>
+    <td class="tg-baqh">büyükleriyle-<span data-metin="ana gri">sınıf</span></td>
+    <td class="tg-baqh"><span data-metin="ana gri">class</span>-with-bigger</td>
+    <td class="tg-yw4l">Tanımlandığı ekran ile daha büyük ekranlara özellik atar</td>
+    <td class="tg-yw4l">Assigns features to bigger screens with the defined screen</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">Küçük Ekranlar İle</td>
+    <td class="tg-yw4l">With Smaller Screens</td>
+    <td class="tg-baqh">küçükleriyle-<span data-metin="ana gri">sınıf</span></td>
+    <td class="tg-baqh"><span data-metin="ana gri">class</span>-with-smaller</td>
+    <td class="tg-yw4l">Tanımlandığı ekran ile daha küçük ekranlara özellik atar</td>
+    <td class="tg-yw4l">Assigns features to smaller screens with the defined screen</td>
+  </tr>
+</table>
+
+
 <p><span data-metin="dikkat">data-gnl="SAYI SAYIp"</span>: Telefon ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır. SAYIp değeri kap örgüsünün hangi düzende kullanılacağını tanımlar.</p>
 
 <p><span data-metin="dikkat">data-ufk="SAYI SAYIp"</span>: Tablet ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır. SAYIp değeri kap örgüsünün hangi düzende kullanılacağını tanımlar.</p>
