--- a/belgeler/terimler.html
+++ b/belgeler/terimler.html
@@ -15,7 +15,7 @@ title: Terimler
 </style>
 <table class="tg">
   <tr>
-    <th class="tg-baqh" colspan="6">Ekran Ölçekleri Tablosu | Screen Sizes Table<br></th>
+    <th class="tg-baqh" colspan="6" data-arka="ana">Ekran Ölçekleri Tablosu | Screen Sizes Table<br></th>
   </tr>
   <tr>
     <td class="tg-7uzy">Türkçe<br>terimler<br></td>
@@ -93,7 +93,7 @@ title: Terimler
 <p></p>
 <table class="tg">
   <tr>
-    <th class="tg-baqh" colspan="6">Ekran Seçiciler Tablosu | Screen Selectors Table<br></th>
+    <th class="tg-baqh" colspan="6" data-arka="ana">Ekran Seçiciler Tablosu | Screen Selectors Table<br></th>
   </tr>
   <tr>
     <td class="tg-7uzy">Türkçe<br>terimler<br></td>
