--- a/belgeler/terimler.html
+++ b/belgeler/terimler.html
@@ -138,8 +138,8 @@ title: Terimler
   <tr>
     <td class="tg-yw4l">Büyük Ekranlar İle</td>
     <td class="tg-yw4l">With Bigger Screens</td>
-    <td class="tg-baqh">büyükleriyle-<span data-metin="ana gri">sınıf</span></td>
-    <td class="tg-baqh"><span data-metin="ana gri">class</span>-with-bigger</td>
+    <td class="tg-baqh">büyükleriyle-<span data-metin="ana gri">sınıf</span><br>veya<br><span data-metin="ana gri">sınıf</span></td>
+    <td class="tg-baqh"><span data-metin="ana gri">class</span>-with-bigger<br>or<br><span data-metin="ana gri">class</span></td>
     <td class="tg-yw4l">Tanımlandığı ekran ile daha büyük ekranlara özellik atar</td>
     <td class="tg-yw4l">Assigns features to bigger screens with the defined screen</td>
   </tr>
