--- a/belgeler/terimler.html
+++ b/belgeler/terimler.html
@@ -18,12 +18,12 @@ title: Terimler
     <th class="tg-baqh" colspan="6" data-arka="ana">Ekran Ölçekleri Tablosu | Screen Sizes Table<br></th>
   </tr>
   <tr>
-    <td class="tg-7uzy">Türkçe<br>terimler<br></td>
-    <td class="tg-7uzy">English<br>terms<br></td>
+    <td class="tg-7uzy" width="15%">Türkçe<br>terimler<br></td>
+    <td class="tg-7uzy" width="15%">English<br>terms<br></td>
     <td class="tg-7uzy" width="15%">Türkçe<br>veri-niteliği<br>terimler<br></td>
     <td class="tg-7uzy" width="15%">English<br>data-attribute<br>terms<br></td>
-    <td class="tg-7uzy">Açıklamalar</td>
-    <td class="tg-7uzy">Descriptions</td>
+    <td class="tg-7uzy" width="20%">Açıklamalar</td>
+    <td class="tg-7uzy" width="20%">Descriptions</td>
   </tr>
   <tr>
     <td class="tg-yw4l">Tüm ekranlar<br></td>
@@ -96,12 +96,12 @@ title: Terimler
     <th class="tg-baqh" colspan="6" data-arka="ana">Ekran Seçiciler Tablosu | Screen Selectors Table<br></th>
   </tr>
   <tr>
-    <td class="tg-7uzy">Türkçe<br>terimler<br></td>
-    <td class="tg-7uzy">English<br>terms<br></td>
+    <td class="tg-7uzy" width="15%">Türkçe<br>terimler<br></td>
+    <td class="tg-7uzy" width="15%">English<br>terms<br></td>
     <td class="tg-7uzy" width="15%">Türkçe<br>veri-niteliği<br>etiket terimleri<br></td>
     <td class="tg-7uzy" width="15%">English<br>data-attribute<br>tag terms<br></td>
-    <td class="tg-7uzy">Açıklamalar</td>
-    <td class="tg-7uzy">Descriptions</td>
+    <td class="tg-7uzy" width="20%">Açıklamalar</td>
+    <td class="tg-7uzy" width="20%">Descriptions</td>
   </tr>
   <tr>
     <td class="tg-yw4l">Yalnız Ekran</td>
