--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: home
       </p>
     </div>
   </div>
-  <div data-gnl="8 uzat" data-ort="4" data-etki="havada">
+  <div data-gnl="8 uzat" data-ort="4" data-etki="havada" class="beri-üst-2">
     <div data-gnl="6" style="padding-left:2%">
         <div data-gnl="8" class="beri-alt-1" style="font-size:500%;background-color:#ccc; height:200px;"></div>
         <div data-gnl="8" class="ap-deveb beri-alt-1" style="height:60px;"></div>
