--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@ title: deveb
 <div data-gnl="8 8p üstte" data-ort="8p">
   <div data-gnl="8 uzun-ol göbekte" data-ort="4">
     <div data-gnl="1 1p">
-      <h1 class="metin-deveb beri-2" style="font-size:80pt; font-family: 'Comfortaa', cursive; color:#2c2171 !important; align-items:center; justify-content:center; display:flex;">İŞTE BU!</h1>
-      <p class="metin-gri-3 beri-1">
-        Ağ (web) sayfalarında kullanılmak üzere geliştirilen bir önyüz çatısıdır. İngilizce ve Türkçe dil desteği ile birlikte geliştirilmektedir. Özellikleriyle öne çıkan Deveb'i keşfedin.
+      <h1 class="metin-deveb beri-2" style="font-size:80pt; font-family: 'Comfortaa', cursive; color:#2c2171 !important; display:flex;">deveb</h1>
+      <p class="metin-gri-3 beri-1" style="font-size:13pt;">
+        İşte bu! Yepyeni bir önyüz çatısı buldunuz. Ağ (web) sayfalarınızı tasarlarken deveb'in oluşturduğu özelliklerden faydalanın. Tüm uygulamalarınızı kapsamlı bileşenleri ile kolayca yapmaya başlayın.
+        Ekran örgüsü, kap örgüsü, renk örgüsü ve dahası İngilizce ve Türkçe olmak üzere iki dil desteği ile keşfedilmeyi bekliyor.
       </p>
       <p class="metin-gri-3 beri-2" data-gnl="1 1p ortada göbekte">
         <a data-bağ="genel" href="/belgeler/kap-orgusu.html">BAŞLA</a>&nbsp;
