--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 title: deveb
 ---
-<div data-gnl="8 8p üstte" data-ort="8p">
+<div data-gnl="8 8p göbekte" data-ort="8p" class="beri-üst-2">
   <div data-gnl="8 uzun-ol göbekte" data-ort="4">
     <div data-gnl="1 1p">
       <h1 class="metin-deveb beri-2" style="font-size:80pt; font-family: 'Comfortaa', cursive; color:#2c2171 !important; display:flex;">deveb</h1>
@@ -16,7 +16,7 @@ title: deveb
       </p>
     </div>
   </div>
-  <div data-gnl="8 uzat" data-ort="4" data-etki="havada" class="beri-üst-2">
+  <div data-gnl="8 uzat" data-ort="4" data-etki="havada">
     <div data-gnl="6" style="padding-left:2%">
         <div data-gnl="8" class="beri-alt-1" style="font-size:500%;background-color:#ccc; height:200px;"></div>
         <div data-gnl="8" class="ap-deveb beri-alt-1" style="height:60px;"></div>
