--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -94,6 +94,13 @@ title: Ekran Örgüsü
       </tbody>
     </table>
 
+    <h3>Terimler</h3>
+    <p data-metin="ana">Türkçe: Genel - Minik - Ufak - Küçük - Orta - Büyük - Kocaman - Dev</p>
+    <p data-metin="ana">Kullanımı: data-gnl - data-mnk - data-ufk - data-kçk - data-ort - data-byk - data-kcm - data-dev</p>
+    <p data-metin="ana">English: General - Mini - Extra Small - Small - Medium - Large - Extra Large - Huge</p>
+    <p data-metin="ana">Use: data-gnl - data-mn - data-xs - data-sm - data-md - data-lg - data-xl - data-hg</p>
+    <p>Terimlerden anlaşılacağı üzere genel :|: general tüm ekranları kapsar. Diğerleri ise sırasıyla saat, telefon, tablet, dizüstü, masaüstü, tv, dev ekranları kapsar.</p>
+
     <h2>Ekranları Kapsama Yönleri</h2>
     <p>Deveb ekranları kapsama yönlerine göre kullanım sağlamaktadır. Yani büyük ekranlardan küçük ekranlara doğru, küçük ekranlardan büyük ekranlara doğru ve sadece belirtilen ekranlar olarak üç farklı yöntemle kullanabilirsiniz. Deveb'in bazı özelliklerinde varsayılan ekran kapsama yönü küçük ekrandandan büyük ekrana doğrudur. Bunun dışında olan durumlarda ise ekranları kapsama yönünü belirtmeniz gerekmektedir.</p>
     <h3>Kullanımı</h3>
