--- a/belgeler/kurulum.html
+++ b/belgeler/kurulum.html
@@ -20,7 +20,7 @@ title: Kurulum
 &lt;body&gt;
   &lt;p checked class=&quot;title&quot; id=&#39;title&#39;&gt;Title&lt;/p&gt;
   &lt;!-- here goes the rest of the page --&gt;
-&lt;/body&gt;</pre>
+&lt;/body&gt;</code></pre>
     <p><a href="https://data-deveb.github.io/assets/css/deveb.css">Deveb'i buradan indirebilirsiniz</a></p>
 
     <h2>İngilizce düşünenler için İngilizce diliyle Deveb</h2>
