--- a/belgeler/kurulum.html
+++ b/belgeler/kurulum.html
@@ -8,7 +8,7 @@ title: Kurulum
 
     <h2>Türkçe düşünenler için Türkçe diliyle Deveb</h2>
     <pre style='color:#000000;background:#ffffff;'><span style='color:#a65700; '>&lt;</span><span style='color:#800000; font-weight:bold; '>link</span><span style='color:#274796; '> </span><span style='color:#074726; '>href</span><span style='color:#808030; '>=</span><span style='color:#0000e6; '>"/css/deveb.css"</span><span style='color:#274796; '> </span><span style='color:#074726; '>rel</span><span style='color:#808030; '>=</span><span style='color:#0000e6; '>"stylesheet"</span><span style='color:#a65700; '>></span></pre>
-    <pre><code class="xml">&lt;!DOCTYPE html&gt;
+    <pre><code class="language-html">&lt;!DOCTYPE html&gt;
 &lt;title&gt;Title&lt;/title&gt;
 
 &lt;style&gt;body {width: 500px;}&lt;/style&gt;
