--- a/belgeler/kurulum.html
+++ b/belgeler/kurulum.html
@@ -1,10 +1,9 @@
 ---
 layout: default
-title: Kurulum
+title: Deveb Kurulumu
 ---
 <div data-gnl="24">
-    <h1>Deveb Kurulumu</h1>
-    <p>Deveb kullanımı için yapmanız gereken sadece CSS dosyasını dahil etmenizdir.</p>
+    <p>Deveb kullanımı için yapmanız gereken sadece CSS dosyasını doğru şekilde projenize dahil etmek olacak. Deveb'i Türkçe ve İngilizce kullanabildiğiniz için bunlar ayrıştırılmıştır. Aynı anda iki dilde satırlarınızı yazmak istiyorsanız tüm CSS'leri dahil etmeniz gerekecektir.</p>
 
     <h2>Türkçe düşünenler için Türkçe diliyle Deveb</h2>
     <pre data-gnl="1 1p"><code class="language-html">&lt;link href=&quot;/css/deveb.css&quot; rel=&quot;stylesheet&quot;&gt;</code></pre>
