--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -5,27 +5,26 @@ title: Kap Örgüsü
 
     <h1>Kap Örgüsü <span data-metin="dikkat gri">(s0.9)</span></h1>
 
-    <p>İşte bu! 1'den 24'e kadar olan sütun düzenlerini aynı anda kullanabilmek artık hayal değil. Deveb kap örgüsü bunu en hızlı şekilde yepyeni özelliklerle birlikte kullanımınıza sunuyor. Beğendiniz mi? O zaman kap örgüsünü öğrenerek bir başlangıç yapın. Unutmadan, artık öncelik küçük ekranlara ait.</p>
+    <p>İşte bu! Tek kap düzenine bağlı kalmaktan kurtulun! Çoklu kap düzeni desteği karşınızda. Yani 1'den 24'e kadar olan kaplara ayırma düzenlerini aynı anda kullanabilmek artık hayal değil. Deveb kap örgüsü bunu en hızlı şekilde yepyeni özelliklerle birlikte kullanımınıza sunuyor. Beğendiniz mi? O zaman kap örgüsünü öğrenerek bir başlangıç yapın. Unutmadan, artık öncelik küçük ekranlara ait.</p>
 
-    <h2>Kap Örgüsü Nedir?</h2>
+    <h2>Kap Örgüsü Nedir, Nasıl Çalışır?</h2>
 
-    <p>Bir sayfanın içinde genişlikler belirlemeyi sağlayan örgüye kap örgüsü denir. Kap kelimesi genelde bir şeyi bir arada tutmaya yarayan fiziksel nesneler için kullanılır. Buradan yola çıkarak kodlama dünyasında kelimenin anlamını yerleştirebilirsiniz. Kap örgüsü İngilizce dilinde "grid system" diye anılmaktadır. Deveb çatısı altında bu örgü kendine özgü kullanımı ile diğerlerinin kap örgülerinden farklıdır ve ellbette benzer yönleri de kapsamaktadır.</p>
+    <p>Bir sayfanın içinde genişlikler belirlemeyi sağlayan örgüye kap örgüsü denir. Kap kelimesi genelde bir şeyi bir arada tutmaya yarayan fiziksel nesneler için kullanılır. Buradan yola çıkarak kodlama dünyasında kelimenin anlamını yerleştirebilirsiniz. Kap örgüsü İngilizce dilinde "grid system" diye anılmaktadır. Deveb çatısı altında bu örgü kendine özgü kullanımı ile diğer kap örgülerinden farklıdır ve ellbette benzer yönleri de kapsamaktadır.</p>
 
-    <h2>Nasıl Çalışıyor?</h2>
+    <p>Deveb kap örgüsünde satır, sütun gibi kavramlar temel olarak düşünülmez. Kap kelimesinin sahip olduğu anlam üzerine geliştirilmiştir. Bu örgüde 1'den 24'e kadar sayıları kullanarak çalışmalarınızı yapacaksınız. Sayıları kullanma şekline göre anlamları olan kap örgüsünün basitliğini anladığınızda çalışmanızı yazarken suyun akması gibi yazacaksınız.</p>
 
-    <p>Deveb kap örgüsünde satır, sütun, gibi kavramlar kullanılmaz. Kap kelimesinin sahip olduğu anlam üzerine geliştirilmiştir. Bu örgüde 1'den 24'e kadar sayıları kullanarak çalışmalarınızı yapacaksınız. Sayıları kullanma şekline göre anlamları olan kap örgüsünün basitliğini anladığınızda çalışmanızı yazarken suyun akması gibi yazacaksınız.</p>
+    <p>Ekran ölçekleriyle birlikte kullanılabilirler. Örneğin ekran ölçeği eğer gnl ise en küçük ekran genişliğinden en büyük ekran genişliğine doğru tüm ekranlar için tanımlama yapmışsınız demektir. Eğer ekran ölçeğiniz ufk ise ufak ekran genişliğinden en büyük ekran genişliğine doğru kapsadığı tüm ekranlara hitap eder.</p>
 
-    <p>Ekran ölçekleri ise gnl, ufk, ort, byk olarak isimlendirilir. Ekran ölçeği eğer gnl ise en küçük ekran genişliğinden en büyük ekran genişliğine doğru tüm ekranlara hitap eder. Eğer ekran ölçeğiniz ufk ise ufak ekran genişliğinden en büyük ekran genişliğine doğru kapsadığı tüm ekranlara hitap eder.</p>
+
+    <h2>Kap Örgüsü Kavramları</h2>
 
     <p>Kap örgüsünde oluşturulan bazı kavramlar vardır. Bu kavramları yazılışlarına göre üç farklı şekilde ele alırız. Her kavramın işlevi yerine göre bir işleyiş kazanır. Biliyor olmanız gereken kullanım kavramları:</p>
-
+    <p></p>
     <ul data-deveb>
       <li>"<span data-metin="dikkat">SAYI SAYIp</span>"</li>
       <li>"<span data-metin="dikkat">SAYI</span>"</li>
       <li>"<span data-metin="dikkat">SAYIp</span>"</li>
     </ul>
-
-    <h2>Kap Örgüsü Kavramları</h2>
 
     <p>Kap örgüsünde parça miktarı ve parça düzeni kavramları ana kavramlardır. Parça miktarı dahil olduğu parça düzeninde kaç parçanın toplam genişliğini kullanmak istediğinizi belirtmek için kullanırsınız. Parça düzeni ise bir genişliği kaç eşit parçaya bölerek kullanmak istediğinizi belirtmek için kullanırsınız. Parça miktarı "SAYI" ile ifade edilir. Parça düzeni ise "SAYIp" ile ifade edilir. "p" harfi burada düzen mi yoksa miktar mı belirttiğinizi ayırt etmek amacıyla kullanılır. Parça kelimesinin ilk harfidir. Şimdi ayrıntılara değinelim.</p>
 
@@ -33,7 +32,13 @@ title: Kap Örgüsü
 
     <p>Bu kavramı kullanarak bir kap yazdığınızda tarayıcılara şunu dersiniz; "Ben bu html etiketini SAYIp düzeninde SAYI kadar parçanın toplam genişliğini kullanacağım."</p>
 
-    <p>Örneğin siz bulunduğunuz genişliğin yarısı kadar bir genişlik kullanmak istiyorsanız "1 2p", "2 4p", "3 6p", "4 8p", "5 10p", "6 12p", "7 14p", "8 16p", "9 18p", "10 20p", "11 22p" veya "12 24p" değerlerinden dilediğiniz bir tanesini kullanmanız gerekmektedir. Kullandığınız parça düzeni yavru html etiketleri için varsayılan kap parçası düzeni haline gelecektir.</p>
+    <p>Örneğin siz bulunduğunuz genişliğin yarısı kadar bir genişlik kullanmak istiyorsanız "1 2p", "2 4p", "3 6p", "4 8p", "5 10p", "6 12p", "7 14p", "8 16p", "9 18p", "10 20p", "11 22p" veya "12 24p" değerlerinden dilediğiniz bir tanesini kullanmanız gerekmektedir.</p>
+
+    <pre data-gnl="1 1p"><code class="language-html">
+      &lt;div data-gnl=&quot;1 2p&quot;&gt;
+        Bulundu&#287;u geni&#351;li&#287;in yar&#305;s&#305;n&#305; kapla.
+      &lt;/div&gt;
+    </code></pre>
 
     <h3>"SAYIp" >> "SAYI" Kullanımında Ne Olur?</h3>
 
