--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -36,10 +36,10 @@ title: Kap Örgüsü
 
     <pre data-gnl="1 1p"><code class="language-html">
       &lt;div data-gnl=&quot;1 2p&quot;&gt;
-        Bulundu&#287;u geni&#351;li&#287;in yar&#305;s&#305;n&#305; kapla.
+        Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
       &lt;/div&gt;
     </code></pre>
-
+    <p></p>
     <h3>"SAYIp" >> "SAYI" Kullanımında Ne Olur?</h3>
 
     <p>Bu kavramı kullanarak bir kap yazdığınızda tarayıcıya şunu dersiniz; "Benim varsayılan kap parçası düzenim ana html etiketinde belirttiğim SAYIp'dir. Bu etiketin kapsadığı tüm yavru etiketler ben aksini belirtene kadar bu parça düzeninde olacaktır. Yavru etiketlerde SAYI yazarak genişliklerimi belirteceğim."</p>
