--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -39,6 +39,16 @@ title: Kap Örgüsü
       Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
     &lt;/div&gt;
     </code></pre>
+    <h3>Önizleme</h3>
+    <div data-gnl="1 1p" class="önizleme">
+      <style media="screen">
+        .önizleme{background-color:#efefef; border:1px solid #eee;}
+        .önizleme [data-gnl]{border:1px dashed #eee;}
+      </style>
+      <div data-gnl="1 2p">
+        Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
+      </div>
+    </div>
     <p></p>
     <h3>"SAYIp" >> "SAYI" Kullanımında Ne Olur?</h3>
 
