--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -42,7 +42,7 @@ title: Kap Örgüsü
     <h3>Önizleme</h3>
     <div data-gnl="1 1p" class="önizleme">
       <style media="screen">
-        .önizleme{background-color:#efefef; border:1px solid #eee;}
+        .önizleme{background-color:#efefef; border:1px solid #eee;padding:1%;}
         .önizleme [data-gnl]{border:1px dashed #eee;}
       </style>
       <div data-gnl="1 2p">
