--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -39,17 +39,19 @@ title: Kap Örgüsü
       Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
     &lt;/div&gt;
     </code></pre>
-    <h3>Önizleme</h3>
+    <p></p>
     <div data-gnl="1 1p" class="önizleme">
       <style media="screen">
         .önizleme{background-color:#efefef;}
         .önizleme [data-gnl]{border:1px dashed #eee;}
+        .önizleme h3 {color:green; background-color:#eee;}
       </style>
+      <h3>Önizleme</h3>
       <div data-gnl="1 2p">
         Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
       </div>
     </div>
-    <p></p>
+
     <h3>"SAYIp" >> "SAYI" Kullanımında Ne Olur?</h3>
 
     <p>Bu kavramı kullanarak bir kap yazdığınızda tarayıcıya şunu dersiniz; "Benim varsayılan kap parçası düzenim ana html etiketinde belirttiğim SAYIp'dir. Bu etiketin kapsadığı tüm yavru etiketler ben aksini belirtene kadar bu parça düzeninde olacaktır. Yavru etiketlerde SAYI yazarak genişliklerimi belirteceğim."</p>
