--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -36,9 +36,9 @@ title: Kap Örgüsü
 
     <div data-gnl="1 1p" class="önizleme">
       <style media="screen">
-        .önizleme{background-color:#efefef; padding:5%;}
-        .önizleme [data-gnl]{border:1px solid #2c2171; background-color: #4c41a1;}
-        .önizleme h3 {color:#ddd;margin:0 0 10px 0;}
+        .önizleme{background-color:#efefef; padding:10px;}
+        .önizleme [data-gnl]{border:1px solid #2c2171; background-color: #4c41a1; padding:10px; color:#eee;}
+        .önizleme h3 {color:#999;margin:0 0 10px 0;}
       </style>
       <h3>Önizleme</h3>
       <div data-gnl="1 2p">
