--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -66,14 +66,14 @@ title: Kap Örgüsü
 
     <div data-gnl="1 1p" class="önizleme">
       <h3>Önizleme</h3>
-      <div data-gnl="2p">
+      <div data-gnl="2 2p">
         <div data-gnl="1">
           Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
         </div>
         <div data-gnl="1">
           Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
         </div>
-      </div>      
+      </div>
     </div>
     <pre data-gnl="1 1p"><code class="language-html">
     &lt;div data-gnl=&quot;2 2p&quot;&gt;
