--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -62,7 +62,7 @@ title: Kap Örgüsü
 
     <h3>"SAYIp" >> "SAYI" Kullanımında Ne Olur?</h3>
 
-    <p>Bu kavramı kullanarak bir kap yazdığınızda tarayıcıya şunu dersiniz; "Benim varsayılan kap parçası düzenim ana html etiketinde belirttiğim SAYIp'dir. Bu etiketin kapsadığı tüm yavru etiketler ben aksini belirtene kadar bu parça düzeninde olacaktır. Yavru etiketlerde SAYI yazarak genişliklerimi belirteceğim."</p>
+    <p>Bu kavramı kullanarak bir kap yazdığınızda tarayıcıya şunu dersiniz; "Benim varsayılan kap parçası düzenim ana html etiketinde belirttiğim SAYIp'dir. Bu etiketin kapsadığı tüm yavru etiketler ben aksini belirtene kadar bu parça düzeninde olacaktır. Yavru etiketlerde SAYI yazarak genişliklerimi belirteceğim."<span data-metin="dikkat">Uyarı: Eski internet tarayıcılarını önemseyerek oluşturduğunuz çalışmalarınızda bu yöntem bazı şartları aştığında sorunlu çalışır.</span></p>
 
     <div data-gnl="1 1p" class="önizleme">
       <h3>Önizleme</h3>
