--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -110,11 +110,17 @@ title: Kap Örgüsü
     </div>
     <pre data-gnl="1 1p"><code class="language-html">
     &lt;div data-gnl=&quot;2 2p&quot;&gt;
-      &lt;div data-gnl=&quot;1&quot;&gt;
-        Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
+      &lt;div data-gnl=&quot;1 4p&quot;&gt;
+        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
       &lt;/div&gt;
-      &lt;div data-gnl=&quot;1&quot;&gt;
-        Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
+      &lt;div data-gnl=&quot;1 4p&quot;&gt;
+        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 4p&quot;&gt;
+        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 4p&quot;&gt;
+        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
       &lt;/div&gt;
     &lt;/div&gt;
     </code></pre>
