--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -4,18 +4,15 @@ title: Kap Örgüsü
 ---
 
 
-    <h1>Kap Örgüsü <span data-metin="dikkat gri">(s0.9)</span></h1>
+    <h1>Kap Örgüsü <span data-metin="dikkat gri">(s0.91)</span></h1>
 
-    <p>İşte bu! Tek kap düzenine bağlı kalmaktan kurtulun! Çoklu kap düzeni desteği karşınızda. Yani 1'den 24'e kadar olan kaplara ayırma düzenlerini aynı anda kullanabilmek artık hayal değil. Deveb kap örgüsü bunu en hızlı şekilde yepyeni özelliklerle birlikte kullanımınıza sunuyor. Beğendiniz mi? O zaman kap örgüsünü öğrenerek bir başlangıç yapın. Unutmadan, artık öncelik küçük ekranlara ait.</p>
+    <p>İşte bu! Çoklu kap örgüsü (multi-grid system) ile tek düzene bağlı kalmaktan kurtulun. Aynı sayfa içinde 1'den 24'e kadar desteklenen kap düzenlerini dilediğiniz an, dilediğiniz yerde ve dilediğiniz ekran ölçeğiyle kullanın.</p>
 
-    <h2>Kap Örgüsü Nedir, Nasıl Çalışır?</h2>
+    <h2>Kap Örgüsü Nedir, Nasıl Kullanılır?</h2>
 
-    <p>Bir sayfanın içinde genişlikler belirlemeyi sağlayan örgüye kap örgüsü denir. Kap kelimesi genelde bir şeyi bir arada tutmaya yarayan fiziksel nesneler için kullanılır. Buradan yola çıkarak kodlama dünyasında kelimenin anlamını yerleştirebilirsiniz. Kap örgüsü İngilizce dilinde "grid system" diye anılmaktadır. Deveb çatısı altında bu örgü kendine özgü kullanımı ile diğer kap örgülerinden farklıdır ve ellbette benzer yönleri de kapsamaktadır.</p>
+    <p>Kap örgüsü (İngilizce olarak "grid system") kullanıldığı sayfanın içinde genişlikler tanımlamaya yarar. "Kap" sözcüğünün bilinen bir anlamı da fiziksel bir şeyi bir arada tutmaya yarayan demektir. Deveb çatısı altında bulunan kap örgüsünün kendine özgü kullanımı diğer kap örgülerinden farklıdır ve ellbette benzer yönleri de kapsamaktadır.</p>
 
-    <p>Deveb kap örgüsünde satır, sütun gibi kavramlar temel olarak düşünülmez. Kap kelimesinin sahip olduğu anlam üzerine geliştirilmiştir. Bu örgüde 1'den 24'e kadar sayıları kullanarak çalışmalarınızı yapacaksınız. Sayıları kullanma şekline göre anlamları olan kap örgüsünün basitliğini anladığınızda çalışmanızı yazarken suyun akması gibi yazacaksınız.</p>
-
-    <p>Ekran ölçekleriyle birlikte kullanılabilirler. Örneğin ekran ölçeği eğer gnl ise en küçük ekran genişliğinden en büyük ekran genişliğine doğru tüm ekranlar için tanımlama yapmışsınız demektir. Eğer ekran ölçeğiniz ufk ise ufak ekran genişliğinden en büyük ekran genişliğine doğru kapsadığı tüm ekranlara hitap eder.</p>
-
+    <p>Satır, sütun gibi sözcükler yerine kap sözcüğü kap örgüsünün temeli kullanılmaktadır. 1'den 24'e kadar kap düzeni oluşturabildiğiniz bu örgüde ayrıntılı kullanım bilgilerini belgenin devamında bulacaksınız.</p>
 
     <h2>Kap Örgüsü Kavramları</h2>
 
