--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -14,9 +14,7 @@ title: Kap Örgüsü
 
     <p>Satır, sütun gibi sözcükler yerine kap sözcüğü kap örgüsünün temeli kullanılmaktadır. 1'den 24'e kadar kap düzeni oluşturabildiğiniz bu örgüde ayrıntılı kullanım bilgilerini belgenin devamında bulacaksınız.</p>
 
-    <h2>Kap Örgüsü Kavramları</h2>
-
-    <p>Kap örgüsünde oluşturulan bazı kavramlar vardır. Bu kavramları yazılışlarına göre üç farklı şekilde ele alırız. Her kavramın işlevi yerine göre bir işleyiş kazanır. Biliyor olmanız gereken kullanım kavramları:</p>
+    <p>Kap örgüsünü doğru şekilde kullanabilmek için bazı terimleri biliyor olmamız gerekir. Bu terimler yazılışlarına göre üç farklı şekilde ele almaktayız. Bunlar;</p>
     <p></p>
     <ul data-deveb>
       <li>"<span data-metin="dikkat">SAYI SAYIp</span>"</li>
@@ -24,7 +22,7 @@ title: Kap Örgüsü
       <li>"<span data-metin="dikkat">SAYIp</span>"</li>
     </ul>
     <p></p>
-    <p>Kap örgüsünde parça miktarı ve parça düzeni kavramları ana kavramlardır. Parça miktarı dahil olduğu parça düzeninde kaç parçanın toplam genişliğini kullanmak istediğinizi belirtmek için kullanırsınız. Parça düzeni ise bir genişliği kaç eşit parçaya bölerek kullanmak istediğinizi belirtmek için kullanırsınız. Parça miktarı "SAYI" ile ifade edilir. Parça düzeni ise "SAYIp" ile ifade edilir. "p" harfi burada düzen mi yoksa miktar mı belirttiğinizi ayırt etmek amacıyla kullanılır. Parça kelimesinin ilk harfidir. Şimdi ayrıntılara değinelim.</p>
+    <p> Her terimin işlevi yerine göre bir işleyiş kazanır. Kap örgüsünde parça miktarı ve parça düzeni terimleri ana terimlerdir. Parça miktarı terimini dahil olduğu parça düzeninde, kaplanmak istenen toplam parça genişliğini belirtmek için kullanacağız. Parça düzeni ise bir genişliği kaç eşit parçaya bölerek kullanmak istediğinizi belirtmekye yarar. Parça miktarı "SAYI" ile ifade edilir. Parça düzeni ise "SAYIp" ile ifade edilir. "p" harfi burada düzen mi yoksa miktar mı belirttiğinizi ayırt etmek amacıyla kullanılır. Parça kelimesinin ilk harfidir. Şimdi ayrıntılara değinelim.</p>
 
     <h3>"SAYI SAYIp" Kullanımında Ne Olur?</h3>
 
