--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -24,12 +24,10 @@ title: Kap Örgüsü
     <p></p>
     <p> Her terimin işlevi yerine göre bir işleyiş kazanır. Kap örgüsünde parça miktarı ve parça düzeni terimleri ana terimlerdir. Parça miktarı terimini dahil olduğu parça düzeninde, kaplanmak istenen toplam parça genişliğini belirtmek için kullanacağız. Parça düzeni ise bir genişliği kaç eşit parçaya bölerek kullanmak istediğinizi belirtmekye yarar. Parça miktarı "SAYI" ile ifade edilir. Parça düzeni ise "SAYIp" ile ifade edilir. "p" harfi burada düzen mi yoksa miktar mı belirttiğinizi ayırt etmek amacıyla kullanılır. Parça kelimesinin ilk harfidir. Şimdi ayrıntılara değinelim.</p>
 
-    <h3>"SAYI SAYIp" Kullanımında Ne Olur?</h3>
+    <h3>"SAYI SAYIp" Kullanım Yöntemi</h3>
 
-    <p>Bu kavramı kullanarak bir kap yazdığınızda tarayıcılara şunu dersiniz; "Ben bu html etiketini SAYIp düzeninde SAYI kadar parçanın toplam genişliğini kullanacağım."</p>
-
-    <p>Örneğin siz bulunduğunuz genişliğin yarısı kadar bir genişlik kullanmak istiyorsanız "1 2p", "2 4p", "3 6p", "4 8p", "5 10p", "6 12p", "7 14p", "8 16p", "9 18p", "10 20p", "11 22p" veya "12 24p" değerlerinden dilediğiniz bir tanesini kullanmanız gerekmektedir.</p>
-
+    <p>Bu kavramı kullanarak bir kap yazdığınızda tarayıcılara şunu dersiniz; "Ben bu alanı SAYIp düzeninde SAYI kadar parçanın toplam genişliğinde kullanacağım". Örneğin siz bulunduğunuz genişliğin yarısı kadar bir genişlik kullanmak istiyorsanız "1 2p", "2 4p", "3 6p", "4 8p", "5 10p", "6 12p", "7 14p", "8 16p", "9 18p", "10 20p", "11 22p" veya "12 24p" değerlerinden dilediğiniz bir tanesini kullanmanız gerekmektedir.</p>
+    <p></p>
     <div data-gnl="1 1p" class="önizleme">
       <h3>Önizleme</h3>
       <div data-gnl="1 2p">
