--- a/belgeler/kap-orgusu/olcekler.html
+++ b/belgeler/kap-orgusu/olcekler.html
@@ -2,12 +2,10 @@
 layout: default
 title: Kap Örgüsü Ölçekleri
 ---
-<h1>Ölçekler - Kap Örgüsü</h1>
 <div data-gnl="24">
-  <h2>Parça Yöntemi Ölçekleri</h2>
   <p>Aşağıdaki tabloda 24 parçalı gruba kadar belirlenmiş parça gruplarını görmektesiniz. Bir genişlikte tablodaki değerlere göre düzen kurmak istiyorsanız tip="değer" kuralı üzerinden sınıf yazarsınız. Örnek: data-gnl="4 8p" yani tüm ekranlarda içinde bulunduğu genişliğin 8'e bölünmüş eşit parçasından 4 tanesinin toplamı kadar genişlik kullanılacağını belirtir. </p>
 </div>
-<div class="beri-üst-1" data-gnl="24">
+<div class="beri-üst-1 beri-alt-1" data-gnl="24">
   <div data-gnl="24">
     <div class="kutu kutu-genel" data-gnl="24">
       <ul class="liste-temiz">
